=== 4.0.0 (TBD)
* Update jars and docs for HTTPComponents 4.0 HttpClient and dependencies.

=== 3.1.3 (TBD)
* Rename gem rjack-httpclient and as module RJack::HTTPClient
* Update/relax rjack-slf4j dependency to '~> 1.5.8' (tested with slf4j 1.5.8.1).
* Replace included commons-codec with rjack-commons-codec gem dependency.
* Use rjack-tarpit for build.

=== 3.1.2 (2009-5-29)
* Use rdoc 2.4.3 and hoe 1.12.2 for build.

=== 3.1.1 (2009-2-22)
* Inital release based on HttpClient 3.1