@@ -5,6 +5,6 @@ History.rdoc
 Rakefile
 pom.xml
 assembly.xml
-lib/rjack-httpclient/base.rb
-lib/rjack-httpclient.rb
+lib/rjack-httpclient-4/base.rb
+lib/rjack-httpclient-4.rb
 test/test_httpclient.rb
