@@ -1,4 +1,4 @@
-= rjack-httpclient
+= rjack-httpclient-4
 
 * http://rjack.rubyforge.org
 * http://rubyforge.org/projects/rjack
@@ -6,20 +6,19 @@
 == Description
 
 A gem packaging of the {HttpComponents}[http://hc.apache.org/] HTTP
-Client for JRuby.
+Client 4.x for JRuby.
 
 * Provides httpclient and httpcore jars.
-* Provides a RJack::HTTPClient::ManagerFacade for client and connection
+* Provides a RJack::HTTPClient4::ManagerFacade for client and connection
   manager setup, start, shutdown.
 
 == Synopsis
 
  require 'rjack-logback'
- require 'rjack-httpclient'
+ require 'rjack-httpclient-4'
 
- include RJack::HTTPClient
+ mf = RJack::HTTPClient4::ManagerFacade.new
 
- mf = ManagerFacade.new
  mf.connection_params.so_timeout         = 2000 #ms
  mf.manager_params.timeout               = 2000 #ms
  mf.manager_params.max_total_connections = 200
@@ -47,7 +46,7 @@ See {org.apache.http.client.HttpClient}[http://hc.apache.org/httpcomponents-clie
 
 == License
 
-=== rjack-httpclient gem
+=== rjack-httpclient-4 gem
 
 Copyright (c) 2008-2009 David Kellum
 
