@@ -1,8 +1,9 @@
 === 4.0.0 (TBD)
 * Update jars and docs for HTTPComponents 4.0 HttpClient and dependencies.
+* Rename gem rjack-httpclient-4 and as module RJack::HTTPClient4
 
 === 3.1.3 (TBD)
-* Rename gem rjack-httpclient and as module RJack::HTTPClient
+* Rename gem rjack-httpclient-3 and as module RJack::HTTPClient3
 * Update/relax rjack-slf4j dependency to '~> 1.5.8' (tested with slf4j 1.5.8.1).
 * Replace included commons-codec with rjack-commons-codec gem dependency.
 * Use rjack-tarpit for build.
